--- a/src/index.scss
+++ b/src/index.scss
@@ -17,3 +17,7 @@ code {
 .flex {
    display: flex;
 }
+
+.css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input {
+   padding: 7px 10px !important;
+}
