--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,14 @@
-@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap';
+@import 'swiper/css';
+@import 'swiper/css/free-mode';
+@import 'swiper/css/scrollbar';
+@import 'animate.css';
+@import 'react-toastify/dist/ReactToastify.css';
+
+// fonts
+@import '@fontsource/roboto/300.css';
+@import '@fontsource/roboto/400.css';
+@import '@fontsource/roboto/500.css';
+@import '@fontsource/roboto/700.css';
 
 body {
    margin: 0;
