--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,12 @@
 @import 'swiper/css';
+@import 'swiper/css/bundle';
 @import 'swiper/css/free-mode';
 @import 'swiper/css/scrollbar';
+@import 'swiper/css/navigation';
+@import 'swiper/css/lazy';
+@import 'swiper/css/pagination';
+@import 'swiper/css/zoom';
+
 @import 'animate.css';
 @import 'react-toastify/dist/ReactToastify.css';
 
@@ -9,6 +15,7 @@
 @import '@fontsource/roboto/400.css';
 @import '@fontsource/roboto/500.css';
 @import '@fontsource/roboto/700.css';
+@import '@fontsource/roboto/900.css';
 
 body {
    margin: 0;
@@ -22,6 +29,10 @@ body {
 code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
+}
+
+a {
+   text-decoration: none;
 }
 
 .flex {
